# squeezelite

./: .gitignore  flake.nix  meson.build  meson_options.txt  project_version.txt
nix/libs/: default.nix
nix/nixpkgs-overlays/: default.nix
nix/nixpkgs-pkgs/alac/: default.nix
nix/nixpkgs-pkgs/squeezelite/: default.nix
