option('auto_link_dlsym', type : 'feature', value : 'auto', description : 'Override value of all \'auto\' link_dlsym features')
option('codec_alac', type : 'feature', value : 'auto', description : 'If enabled')
option('codec_dsd', type : 'feature', value : 'auto', description : 'If enabled')
option('codec_faad2', type : 'feature', value : 'auto', description : 'If allowed')
option('codec_ffmpeg', type : 'feature', value : 'auto', description : 'If enabled')
option('codec_flac', type : 'feature', value : 'auto', description : 'If allowed')
option('codec_mad', type : 'feature', value : 'auto', description : 'If allowed')
option('codec_mpg123', type : 'feature', value : 'auto', description : 'If allowed')
option('codec_opus', type : 'feature', value : 'auto', description : 'If enabled')
option('codec_pcm', type : 'feature', value : 'auto', description : 'If allowed')
option('codec_vorbis', type : 'feature', value : 'auto', description : 'If allowed')
option('control_infrared', type : 'feature', value : 'auto', description : 'If enabled')
option('gpio', type : 'feature', value : 'auto', description : 'If enabled')
option('link_dlsym_faad2', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_flac', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_libav', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_lirc', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_mad', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_mpg123', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_opus', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_soxr', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_ssl', type : 'feature', value : 'auto', description : 'If allowed')
option('link_dlsym_vorbis', type : 'feature', value : 'auto', description : 'If allowed')
option('model_name', type : 'string', value : 'SqueezeLite', description : 'Default player model name')
option('output_alsa', type : 'feature', value : 'auto', description : 'If enabled')
option('output_portaudio', type : 'feature', value : 'auto', description : 'If enabled')
option('output_pulseaudio', type : 'feature', value : 'auto', description : 'If enabled')
option('output_stdout', type : 'feature', value : 'auto', description : 'If allowed')
option('output_visualizer_export', type : 'feature', value : 'auto', description : 'If enabled')
option('executable_name_base', type : 'string', value : 'squeezelite', description : '')
option('executable_name_suffix', type : 'string', value : '-', description : 'If `-`')
option('raspberry_pi', type : 'feature', value : 'auto', description : 'If enabled')
option('sample_processing', type : 'feature', value : 'auto', description : 'If enabled')
option('sample_resampling', type : 'feature', value : 'auto', description : 'If enabled')
option('sample_resampling_mp', type : 'feature', value : 'auto', description : 'If enabled')
option('ssl', type : 'feature', value : 'auto', description : 'If enabled')
option('system_event_eventfd', type : 'feature', value : 'auto', description : 'If enabled')
option('system_event_selfpipe', type : 'feature', value : 'auto', description : 'If enabled')
option('system_event_winevent', type : 'feature', value : 'auto', description : 'If enabled')
